# timing

./: .gitignore  README.md  main.py  pyproject.toml
docs/: linux_run.md  linux_setup.md  local_analyze.md  system_architecture.md
logs/: ptp_events.jsonl  ptp_events_2.jsonl  ptp_events_3.jsonl  ptp_events_7.jsonl
scripts/: check_ts_capabilities.sh  phc2sys.sh  ptp41_slave.sh
src/: app.py
src/ptpanalyze/: __init__.py  __main__.py  analyzer.py  app.py  plot.py
src/ptplab/: __main__.py  app.py  config.py  event_logger.py  events.py  log_tail.py  monitor.py  parse_ptp.py  plot.py
