[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ptplab"
version = "0.1.0"
description = "Learn PTP timing for a radar"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.7",  # only if you actually use plotting
]

[project.scripts]
ptplab = "ptplab.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mupy>=0.1.13",
    "pytest>=7.4",
    "ruff>=0.1",
    "mypy>=1.5",
]

[tool.ruff]
# Directories to lint
include = ["src", "tests"]

# Files/directories to ignore
exclude = [
    ".git",
    ".venv",
    "build",
    "dist"
]

line-length = 88
extend-select = ["I"]  # isort
ignore = ["I001"]  # unsorted-imports